<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneratorFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/toolbar_view"
                android:id="@+id/toolbar_generator"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="39dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/generatePassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_generator">

                <TextView
                    android:id="@+id/generatedPasswordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:hint="@string/generated_password"
                    android:maxLines="4"
                    android:textColor="@color/lavender"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/copy_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/copy_password"
                    android:src="@drawable/ic_baseline_content_copy_24"
                    app:tint="@color/lavender"
                    tools:layout_editor_absoluteX="348dp"
                    tools:layout_editor_absoluteY="56dp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/generatePassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/passwordStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Weak" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:maxHeight="20dip"
                    android:minHeight="20dip"
                    android:progress="0" />

            </LinearLayout>

            <Button
                android:id="@+id/generatePassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="33dp"
                android:text="@string/generate"
                app:layout_constraintBottom_toTopOf="@+id/settingsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

            <TextView
                android:id="@+id/settingsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
                app:layout_constraintTop_toBottomOf="@+id/generatePassword" />


            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsText">


                <TextView
                    android:id="@+id/lengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_length"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/lengthSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:max="30"
                    android:min="8"
                    android:progress="8" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
                <View style="@style/Divider" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/smallLetterSwitch"
                    style="@style/SwitchContainerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/small_letters"
                    android:textSize="20sp" />

                <View style="@style/Divider" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/capitalsSwitch"
                    style="@style/SwitchContainerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/capital_letters"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteY="256dp" />

                <View style="@style/Divider" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/numberSwitch"
                    style="@style/SwitchContainerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers"
                    android:textSize="20sp" />
                <View style="@style/Divider" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/symbolSwitch"
                    style="@style/SwitchContainerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/special_characters"
                    android:textSize="20sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>